fix scrollbar on windows

--- a/components/ai_chat/resources/page/components/attachment_item/style.module.scss
+++ b/components/ai_chat/resources/page/components/attachment_item/style.module.scss
@@ -106,7 +106,9 @@
   color: var(--leo-color-text-tertiary);
 
   max-width: 100%;
+  white-space: nowrap;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .subtitleText {
