--- a/components/ai_chat/resources/page/components/input_box/style.module.scss
+++ b/components/ai_chat/resources/page/components/input_box/style.module.scss
@@ -113,6 +113,8 @@
 
 .attachmentWrapperScroll {
   overflow-x: auto;
+  overflow-y: hidden;
+  padding-bottom: var(--leo-spacing-s);
   scrollbar-width: thin;
 }
 
